--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "ng serve --configuration=production"
   },
   "dependencies": {
+    "@angular/animations": "^21.1.2",
     "@angular/build": "^21.1.0",
     "@angular/cli": "^21.1.0",
     "@angular/common": "^21.1.0",
