♻️ refactor(core): implementa arquitetura limpa e i18n
【Refatoração】
- introduz arquitetura de domínios, casos de uso e repositórios
- desacopla a lógica de negócio dos componentes da interface
- migra todos os componentes para a API standalone do Angular
- cria 'ModalComponent' reutilizável para unificar janelas modais
- centraliza configuração da aplicação e gerencia via 'AzureConfigService'

【Funcionalidade】
- aprimora busca de histórias para incluir pesquisa por título
- melhora geração de relatório daily com busca de horas de outras US

【Internacionalização】
- traduz toda a interface do usuário para português (pt-BR)
- ajusta prompts do Gemini e dados de mock para o idioma português

【Build & Docs】
- renomeia script npm 'dev' para 'serve:dev' para maior clareza
- atualiza README com o novo comando de execução e porta da aplicação

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "ng serve",
+    "serve:dev": "ng serve",
     "build": "ng build",
     "preview": "ng serve --configuration=production"
   },
