--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "scripts": {
     "serve:dev": "ng serve",
     "build": "ng build",
-    "preview": "ng serve --configuration=production"
+    "preview": "ng serve --configuration=production",
+    "electron:dev": "npm run build && cd electron && npm run dev",
+    "electron:build": "npm run build && cd electron && npm run build",
+    "electron:watch": "set NODE_ENV=development && cd electron && npm start"
   },
   "dependencies": {
     "@angular/animations": "^21.1.2",
     "@angular/build": "^21.1.0",
+    "@angular/cdk": "^21.1.3",
     "@angular/cli": "^21.1.0",
     "@angular/common": "^21.1.0",
     "@angular/compiler": "^21.1.0",
